--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-# Logs
+DOCS/PROJECTS.md
+DOCS/PROJECTS_LOCAL.md
+readme.logs.txt
+test/index.html
+index.html
+test2.txt
+reactphp
+whois-registrar
+*/out.csv
+bash
+apimacro
+grabwhois
+reactphp/
+.idea
 logs
 *.log
 npm-debug.log*
@@ -102,3 +115,36 @@ dist
 
 # TernJS port file
 .tern-port
+apidsl
+letwhois
+flatedit
+apidsl
+grabwhois
+apipong
+airscanning
+multisitemap
+apidsl
+plainedit
+flatedit
+
+apidsl
+plainedit
+flatedit
+apidsl
+plainedit
+flatedit
+apidsl
+plainedit
+flatedit
+apidsl
+plainedit
+flatedit
+apidsl
+plainedit
+flatedit
+apidsl
+apidsl
+flatedit
+plainedit
+reactphp
+apidsl
