--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.apifork
 DOCS/PROJECTS.md
 DOCS/PROJECTS_LOCAL.md
 readme.logs.txt
@@ -148,3 +149,9 @@ flatedit
 plainedit
 reactphp
 apidsl
+flatedit
+plainedit
+reactphp
+flatedit
+plainedit
+reactphp
